objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>This field is created to enable Quote Line object for Advance Approval</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_CLM_SSP_Product1__c</fullName>
        <formula>PMC_BR_CLM_SSPProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BR CLM SSP Product1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Sales_Org__c</fullName>
        <formula>IF( NOT(ISPICKVAL( PMC_CPQ_SalesOrg__c , &quot;&quot;)),true,false)</formula>
        <label>Error Sales Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOT_Shipping_TypePOC__c</fullName>
        <label>MOT_Shipping_TypePOC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barge FCA</fullName>
                </value>
                <value>
                    <fullName>Barge FOB</fullName>
                </value>
                <value>
                    <fullName>Truck CFR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_BR_CLM_SSPProduct__c</fullName>
        <description>To check if the product is from the list</description>
        <formula>IF(OR(
   CONTAINS( SBQQ__Product__r.StockKeepingUnit, &quot;1017214&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1017367&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1017275&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1021533&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1021418&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1017351&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1017295&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1020230&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;1017812&quot;),
   CONTAINS(SBQQ__Product__r.StockKeepingUnit, &quot;001000031&quot;)
),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BR CLM SSP Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ContractDocumentId__c</fullName>
        <description>This field will be used to store the contract document id associated with a quote line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ContractDocumentName__c</fullName>
        <description>This field will store the name of the Contract Document associated with the quote line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ContractTemplateType__c</fullName>
        <description>This will be a backend field used to evaluate the Contract template corresponding to a Quote Line based on the selection of Contract Type and MOT - populated by quote line flow this should be read-only or hidden on UI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Template Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_EarliestCadenceDate__c</fullName>
        <label>Earliest Cadence Date</label>
        <summarizedField>PMC_CPQ_Cadence__c.PMC_CPQ_ConfirmedDate__c</summarizedField>
        <summaryForeignKey>PMC_CPQ_Cadence__c.PMC_CPQ_QuoteLine__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ExspaceText__c</fullName>
        <formula>&quot;YES&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exspace Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_HasPriceChanged__c</fullName>
        <description>This field will indicate if Price has Changed in an Amendment or if a new line was adeed</description>
        <formula>IF(
AND(
TEXT(SBQQ__Quote__r.SBQQ__Type__c)=&apos;Amendment&apos;,
SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.PMC_CPQ_FinalPricePerTonne__c  &lt;&gt; PMC_CPQ_FinalPricePerTonne__c), 
true, 
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Price Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_HasShipToorPOChanged__c</fullName>
        <description>This field will be used to indicate if the Ship To or Line PO Number fields of Quote Lines in an Amendment Quote has been changed from what they were in the Original Quote Lines</description>
        <formula>IF(
AND(
TEXT(SBQQ__Quote__r.SBQQ__Type__c) = &apos;Amendment&apos;,
OR(
SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.PMC_CPQ_LinePONumber__c &lt;&gt;PMC_CPQ_LinePONumber__c,
SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.PMC_CPQ_ShipTo__c &lt;&gt; PMC_CPQ_ShipTo__c   
)
),
true,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Ship-To or PO Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_LatestCadenceDate__c</fullName>
        <label>Latest Cadence Date</label>
        <summarizedField>PMC_CPQ_Cadence__c.PMC_CPQ_ConfirmedDate__c</summarizedField>
        <summaryForeignKey>PMC_CPQ_Cadence__c.PMC_CPQ_QuoteLine__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_Payment_Terms_Translation__c</fullName>
        <description>Payment term translations to the document language</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Terms Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_QuoteLineNumber__c</fullName>
        <formula>IF	(
	TEXT(SBQQ__Quote__r.SBQQ__Type__c) &lt;&gt; &apos;Amendment&apos;,
		SBQQ__Quote__r.PMC_CLM_DocumentNumber__c &amp; &quot;-&quot; &amp; SUBSTITUTE(Name,&quot;QL-&quot;,&quot;&quot;),
		IF	(
				ISNULL(SBQQ__UpgradedSubscription__c) ||  ISBLANK(SBQQ__UpgradedSubscription__c),
				SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.SBQQ__Quote__r.PMC_CLM_DocumentNumber__c &amp; &quot;-&quot; &amp; SUBSTITUTE(Name,&quot;QL-&quot;,&quot;&quot;),
				SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.SBQQ__Quote__r.PMC_CLM_DocumentNumber__c &amp; &quot;-&quot; &amp; SUBSTITUTE(SBQQ__UpgradedSubscription__r.SBQQ__QuoteLine__r.Name ,&quot;QL-&quot;,&quot;&quot;) 	
			)
	)</formula>
        <label>Quote Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_ShipToInformation__c</fullName>
        <description>This field is created to get the Ship To address information on the Line level - so that it can be shown in the amendment template</description>
        <formula>PMC_CPQ_ShipTo__r.ShippingStreet + &apos;, &apos; + PMC_CPQ_ShipTo__r.ShippingCity + &apos;, &apos; +  PMC_CPQ_ShipTo__r.ShippingPostalCode + &apos;, &apos; + PMC_CPQ_ShipTo__r.ShippingState + &apos;, &apos; + PMC_CPQ_ShipTo__r.ShippingCountry</formula>
        <label>Ship To Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AccountBackend__c</fullName>
        <formula>SBQQ__Quote__r.SBQQ__Account__c</formula>
        <label>Account (Backend)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created  to check the associated Account of a SBQQ quote line item record.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AdjustedListPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is created  to check the list price adjustment</description>
        <label>Adjusted List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AdministrativeCosts__c</fullName>
        <label>Administrative Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AdvanceBilling__c</fullName>
        <formula>SBQQ__Quote__r.PMC_CPQ_AdvanceBilling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Allocation__c</fullName>
        <description>This field is created  to check the allocation data of quote lines</description>
        <label>Allocation (MTN)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ApprovalRequired__c</fullName>
        <formula>IF( (ISPICKVAL(PMC_CPQ_ContractType__c, &apos;FPD&apos;)),0,
IF(
AND(
SBQQ__Quantity__c &gt;= 10000,
PMC_CPQ_NetUnitPrice__c&gt;=PMC_CPQ_PriceGuidanceTarget__c,
PMC_CPQ_NetUnitPrice__c&lt;= PMC_CPQ_PriceGuidanceCeiling__c
), 2,
IF(
AND(
SBQQ__Quantity__c &lt; 10000,
PMC_CPQ_NetUnitPrice__c &gt;=PMC_CPQ_PriceGuidanceFloor__c,
PMC_CPQ_NetUnitPrice__c&lt; PMC_CPQ_PriceGuidanceTarget__c
), 3,
IF(
AND(
SBQQ__Quantity__c &gt;= 10000,
PMC_CPQ_NetUnitPrice__c&gt;= PMC_CPQ_PriceGuidanceFloor__c,
PMC_CPQ_NetUnitPrice__c&lt; PMC_CPQ_PriceGuidanceTarget__c
), 4,
IF(
AND(
SBQQ__Quantity__c &lt; 10000,
PMC_CPQ_NetUnitPrice__c&lt; PMC_CPQ_PriceGuidanceFloor__c
), 5,
IF(
AND(
SBQQ__Quantity__c &gt;= 10000,
PMC_CPQ_NetUnitPrice__c&lt; PMC_CPQ_PriceGuidanceFloor__c
), 6,0

))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ApprovalRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as the part of Approval setup.</description>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ApprovalType__c</fullName>
        <formula>IF(
   AND(
        SBQQ__Quantity__c &gt;= 10000,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &gt;   PMC_CPQ_PriceGuidanceTarget__c,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &lt;=   PMC_CPQ_PriceGuidanceCeiling__c
       ),  $Label.PMC_CPQ_NAApprovalRow2,
IF(
   AND(
        SBQQ__Quantity__c &lt; 10000,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &gt;   PMC_CPQ_PriceGuidanceFloor__c,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &lt;=   PMC_CPQ_PriceGuidanceTarget__c  
       ),   $Label.PMC_CPQ_ForNADiscountApprovalRow3T2 ,
IF(
   AND(
        SBQQ__Quantity__c &gt;= 10000,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &gt;   PMC_CPQ_PriceGuidanceFloor__c,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &lt;=   PMC_CPQ_PriceGuidanceTarget__c  
       ),    $Label.PMC_CPQ_ForNADiscountApprovalRow4 ,
IF(
   AND(
        SBQQ__Quantity__c &lt; 10000,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &lt; PMC_CPQ_PriceGuidanceFloor__c 
       ), $Label.PMC_CPQ_ForNADiscountApprovalRow5,
IF(
   AND(
        SBQQ__Quantity__c &gt;= 10000,
        SBQQ__ListPrice__c -  PMC_CPQ_Discount__c &lt; PMC_CPQ_PriceGuidanceFloor__c 
       ),  $Label.PMC_CPQ_ForNADiscountApprovalRow6 ,&apos;&apos;
)))))</formula>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as a part of Approval setup</description>
        <label>Approval</label>
        <referenceTo>sbaa__Approval__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AvailabilityIndicator__c</fullName>
        <description>This field is created  to check product availability.</description>
        <formula>&quot; &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AveragePricePerProduct__c</fullName>
        <label>Average Price Per Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AvgNetPrice__c</fullName>
        <label>Avg Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRLineTotalPriceFormula__c</fullName>
        <formula>PMC_CPQ_FinalPricePerTonne__c * SBQQ__Quantity__c</formula>
        <label>BR Line Total Price Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRVolumeApprovalRequired__c</fullName>
        <formula>IF(AND(PMC_CPQ_QuoteRegionExtractor__c =&apos;Brazil&apos;,  SBQQ__EffectiveQuantity__c &gt;=10000) ,1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BR Volume Approval Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CombinationOfFields__c</fullName>
        <description>This field contains comma separated values of all fields in the record to compare with the Amended QuoteLine</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Combination Of Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CommissionBeforeAmend__c</fullName>
        <label>Commission Before Amend</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CommissionCurrency__c</fullName>
        <description>This field to store commission in currency format</description>
        <label>Commission Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Commission__c</fullName>
        <description>This field is created  to check commission&apos;s value</description>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractType__c</fullName>
        <description>This field is created  to check the contract type associated to the SBQQ Quote line item.</description>
        <inlineHelpText>This field captures the Contract Type</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_QuoteRecordType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>FPD</fullName>
                </value>
                <value>
                    <fullName>Priced</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                    <isActive>false</isActive>
                    <label>Annual</label>
                </value>
                <value>
                    <fullName>FPD Ex-Space</fullName>
                    <isActive>false</isActive>
                    <label>FPD Ex-Space</label>
                </value>
                <value>
                    <fullName>Priced Ex-Space</fullName>
                    <isActive>false</isActive>
                    <label>Priced Ex-Space</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ConvDiscountMarkup__c</fullName>
        <formula>IF ( ISPICKVAL(CurrencyIsoCode ,&apos;USD&apos;),PMC_CPQ_Discount__c, PMC_CPQ_Discount__c *  PMC_CPQ_ExchangeRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conv.Price Adjustment (deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CostAdjustment__c</fullName>
        <label>Cost Adjustment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CropTypeBeforeAmend__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Crop Type Before Amend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CropType__c</fullName>
        <label>Crop Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Artichoke</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Bean</fullName>
                </value>
                <value>
                    <fullName>Beans Safrinha</fullName>
                </value>
                <value>
                    <fullName>Cane</fullName>
                </value>
                <value>
                    <fullName>Carrot</fullName>
                </value>
                <value>
                    <fullName>Cassava</fullName>
                </value>
                <value>
                    <fullName>Castor bean</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Coconut</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Coffee-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Corn-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Corn Safrinha</fullName>
                </value>
                <value>
                    <fullName>Corn silage</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Cotton-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Cucumber</fullName>
                </value>
                <value>
                    <fullName>Eucalyptus</fullName>
                </value>
                <value>
                    <fullName>Frijoles-Riego</fullName>
                </value>
                <value>
                    <fullName>Fruits</fullName>
                </value>
                <value>
                    <fullName>Garlic</fullName>
                </value>
                <value>
                    <fullName>Grape</fullName>
                </value>
                <value>
                    <fullName>Millet silage</fullName>
                </value>
                <value>
                    <fullName>Mulberry</fullName>
                </value>
                <value>
                    <fullName>NA-Beef cattle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerOfferedPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Offered Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DecisionSupportMatrix__c</fullName>
        <label>Decision Support Matrix</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryRegion__c</fullName>
        <description>Marked for deletion</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DirtyDistance__c</fullName>
        <label>Dirty Distance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is created  to check the discount of any quote line record.</description>
        <inlineHelpText>Discount on the product from final price per tonne</inlineHelpText>
        <label>Price Adjustment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
        <description>This field is created  to check the estimated freight value.</description>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstTax__c</fullName>
        <description>This field is created  to check the estimated tax.</description>
        <label>Est. Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExchangeRate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExistingInventory__c</fullName>
        <description>This field is created  to check Inventory database mapping based on Product &amp; Origin</description>
        <label>Existing Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpeditionPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Point</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.PMC_CPQ_ProductLocationLocationBackend__c</field>
                <operation>equals</operation>
                <valueField>Location.PMC_CPQ_ExpeditionPoint__c</valueField>
            </filterItems>
            <filterItems>
                <field>Location.RecordTypeId</field>
                <operation>equals</operation>
                <value>Expedition Point</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>CPQ Quote Lines (Expedition Point)</relationshipLabel>
        <relationshipName>CPQ_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExspaceIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created  to check Ex-Space indicator value.</description>
        <label>Exclusive Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalPricePerTon__c</fullName>
        <label>Final Price Per Ton (Original)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalPricePerTonne__c</fullName>
        <description>The Overall Final Price Per Tonne</description>
        <label>Final Price Per Tonne</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FixedPaymentDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fixed Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FlowVRBypassToggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field to bypass validation rules triggered via flow</description>
        <label>Flow VR Bypass Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FreightAdjustmentReference__c</fullName>
        <label>Freight Adjustment Reference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FreightMonth__c</fullName>
        <label>Freight Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freight</fullName>
                    <label>Actual</label>
                </value>
                <value>
                    <fullName>Freight +1</fullName>
                    <label>Actual +1</label>
                </value>
                <value>
                    <fullName>Freight +2</fullName>
                    <label>Actual +2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GeneralComments__c</fullName>
        <description>This field is created  to Provide comments on any line item data.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>General Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_HarvestDeliveryEnd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Harvest Period - Delivery End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_HarvestDeliveryStart__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Harvest Period - Delivery Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_HarvestPeriod__c</fullName>
        <description>This field is created to check Harvest period.</description>
        <label>Harvest Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InSalesProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Sales Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterm2__c</fullName>
        <description>This field is to check destination of the incoterm which is dependent on Incoterm1 and Region</description>
        <formula>IF( PMC_CPQ_QuoteRegionExtractor__c  = &apos;North America&apos;,
IF(OR( ISPICKVAL( PMC_CPQ_Incoterms1__c , &apos;FOB&apos;), ISPICKVAL( PMC_CPQ_Incoterms1__c , &apos;FCA&apos;)),&apos;Origin&apos;,&apos;Destination&apos;),
IF(PMC_CPQ_QuoteRegionExtractor__c  = &apos;Brazil&apos;,&apos;Origin&apos;,&apos;Destination&apos;))</formula>
        <label>Back End Incoterms2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms1__c</fullName>
        <description>This field is created  to check incoterms data of line item record</description>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_QuoteRecordSubType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IncotermsBeforeAmend__c</fullName>
        <description>This is a backed field used to store incoters1 value from the quote line this is cloned from after Amend</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterms Before Amend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Industrialization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industrialization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InterestFees__c</fullName>
        <label>Interest Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InterestPeriod__c</fullName>
        <label>Days to customer Instalment Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Interest__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This field is created  to check the interest for a quote line item record.</description>
        <label>Interest Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created  to check if the field is considered for Deletion.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to determine if the quote line has been successfuly create in SAP.</description>
        <label>Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsQuantityChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine if quantity is updated in QLE.</description>
        <label>IsQuantityChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsQuantityUpdated__c</fullName>
        <formula>SBQQ__Quantity__c  &lt;&gt;   PMC_CPQ_Last_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quantity Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastPricedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Priced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastProductCustomerPrice__c</fullName>
        <label>Last Product Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Last_Quantity__c</fullName>
        <description>This field will store the last quantity sent to SAP for cadence.</description>
        <label>Last Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LasttransactedPrice__c</fullName>
        <label>Last Transacted Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LegacyQuoteLineID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Quote Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>